Cleanup, fixed tracking bug if video gets stuck

--- a/html_v2/css/style.css
+++ b/html_v2/css/style.css
@@ -41,10 +41,29 @@ html, body {
 	z-index: 120;
 	position: relative;
 	top: 50%;
-	transform: translateY(-50%);
 	font-size:50px;
 	color:#fff;
 	padding-left:50px;
+	cursor:none;
+
+	-moz-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+
+	-webkit-transition: opacity .5s ease-in-out;
+	-moz-transition: opacity .5s ease-in-out;
+	-ms-transition: opacity .5s ease-in-out;
+	-o-transition: opacity .5s ease-in-out;
+	transition: opacity .5s ease-in-out;
+
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .button {
